-- Copyright © 2015 Benjamin Barenblat <bbaren@mit.edu>
--
-- This program is free software: you can redistribute it and/or modify it under
-- the terms of the GNU General Public License as published by the Free Software
-- Foundation, either version 3 of the License, or (at your option) any later
-- version.
--
-- This program is distributed in the hope that it will be useful, but WITHOUT
-- ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-- FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
-- details.
--
-- You should have received a copy of the GNU General Public License along with
-- this program.  If not, see <http://www.gnu.org/licenses/>.

cabal-version:       >=1.10
name:                lyt
version:             0.0.0
synopsis:            Literate programming tool
license:             GPL-3
license-file:        COPYING
author:              Benjamin Barenblat
category:            Language
build-type:          Simple
stability:           alpha
tested-with:         GHC==7.6.3

executable lyt
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- other-extensions:    
  ghc-options:         -Wall
                       -fwarn-tabs
                       -fwarn-incomplete-uni-patterns
                       -fwarn-monomorphism-restriction
                       -fwarn-auto-orphans
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >=4.6 && <4.7
                     , vector >=0.10 && <0.11
